fixed projects footer spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ body{
 }
 
  @media screen and (min-width:992px){
-     #about,#contact,{
+     #about,#contact,#project{
          height: 100vh;
      }
  }
